--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bestellservice</title>
     <link rel="stylesheet" href="styles.css">
+      <link rel="icon" type="image/x-icon" href="./img/logo.svg">
 </head>
 <body>
     <header>
@@ -30,13 +31,15 @@
 
         <section class="vehicles">
             <h3>Unsere Fahrzeuge</h3>
-            <div class="vehicle">
-                <img src="./img/mercedes.jpg" alt="Mercedes Vito 2021" class="vehicle-image">
-                <p><strong>Mercedes Vito 2021</strong> – Geräumig und komfortabel für größere Gruppen.</p>
+            <div class="vehicle" style="background-image: url('./img/mercedes.jpg');">
+                <div class="vehicle-info">
+                    <p><strong>Mercedes Vito 2021</strong> – Geräumig und komfortabel für größere Gruppen.</p>
+                </div>
             </div>
-            <div class="vehicle">
-                <img src="./img/Toyota.avif" alt="Toyota Corolla 2024" class="vehicle-image">
-                <p><strong>Toyota Corolla 2024</strong> – Elegant, umweltfreundlich und ideal für kleinere Gruppen.</p>
+            <div class="vehicle" style="background-image: url('./img/Toyota.avif');">
+                <div class="vehicle-info">
+                    <p><strong>Toyota Corolla 2024</strong> – Elegant, umweltfreundlich und ideal für kleinere Gruppen.</p>
+                </div>
             </div>
         </section>
 
