--- a/impressum.html
+++ b/impressum.html
@@ -19,7 +19,7 @@
 
         <section class="impressum-details">
             <h3>Unternehmensname</h3>
-            <p>Bestellservice NRW</p>
+            <p>Artur Galstyan</p>
 
             <h3>Vertreten durch</h3>
             <p>Artur Galstyan</p>
@@ -32,7 +32,7 @@
             <p>E-Mail: <a href="mailto:artur_200@icloud.com">artur_200@icloud.com</a></p>
 
             <h3>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz</h3>
-            <p>DE123456789</p>
+            <p>DE13450564837</p>
 
             <h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h3>
             <p>Artur Galstyan</p>
