--- a/datenschutz.html
+++ b/datenschutz.html
@@ -37,9 +37,18 @@
             <h3>4. Weitergabe von Daten</h3>
             <p>Eine Weitergabe Ihrer Daten an Dritte erfolgt nicht, außer dies ist zur Durchführung der angefragten Dienstleistung erforderlich.</p>
 
-            <h3>5. Ihre Rechte</h3>
+            <h3>5. Rechtsgrundlage der Verarbeitung</h3>
+            <p>Die Verarbeitung Ihrer personenbezogenen Daten erfolgt auf Basis der Vertragserfüllung gemäß Art. 6 Abs. 1 lit. b DSGVO, da die Daten erforderlich sind, um die Dienstleistung zu erbringen.</p>
+
+            <h3>6. Aufbewahrungsfristen</h3>
+            <p>Ihre personenbezogenen Daten werden nur so lange gespeichert, wie es für die Erbringung der Dienstleistung notwendig ist und nach Abschluss der Dienstleistung gelöscht, es sei denn, gesetzliche Aufbewahrungsfristen erfordern eine längere Speicherung.</p>
+
+            <h3>7. Ihre Rechte</h3>
             <p>Sie haben das Recht auf Auskunft, Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer personenbezogenen Daten. Zudem haben Sie das Recht auf Datenübertragbarkeit sowie ein Beschwerderecht bei der zuständigen Datenschutzbehörde.</p>
             <p>Kontaktieren Sie uns hierzu per E-Mail: <a href="mailto:artur_200@icloud.com">artur_200@icloud.com</a></p>
+
+            <h3>8. Kontakt zur Aufsichtsbehörde</h3>
+            <p>Die zuständige Aufsichtsbehörde für Datenschutz ist der Landesbeauftragte für Datenschutz und Informationsfreiheit NRW. Weitere Informationen finden Sie unter <a href="https://www.ldi.nrw.de" target="_blank">www.ldi.nrw.de</a>.</p>
         </section>
     </div>
 
